--- a/login.css
+++ b/login.css
@@ -2,12 +2,13 @@
     margin-top: 50px;
     border-radius: 5%;
     border: 3px solid midnightblue;
-    height: 800px;
-    width: 600px;
+    height: 700px;
+    width: 500px;
     display: flex;
     padding: 50px 50px 50px 50px ;
     justify-content: center;
     align-items: center;
+    background-color: lightgrey;
 }
 body{
     display: flex;
@@ -25,4 +26,3 @@ body{
     width: 100%;
     background-color: midnightblue;
     color: white;
-}
