--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     background-color: midnightblue;
     color: white;
     margin-bottom: 50px;
+    cursor: pointer;
 }
 
 .press{
@@ -63,7 +64,7 @@ footer {
     margin-bottom: 20px;
   }
 
-img:hover{
+.shake:hover{
     animation: shake 0.5s;
 }
 @keyframes shake {
